# kalibr_apriltag2

./: .gitignore  CMakeLists.txt  README
examples/: aprilgrid.yaml  apriltags_demo.cpp  mynt_demo.cc
include/apriltags/: TagDetection.h  TagDetector.h  TagFamily.h  tags
src/apriltags/: DetectTarget.cc  MouseSelection.cc  StereoDetectTarget.cc  TagDetection.cc
src/apriltags/example/: apriltags_demo.cpp
